Fix ticker visibility: reorder DOM, add min-height

--- a/src/App.scss
+++ b/src/App.scss
@@ -22,6 +22,7 @@
     display: flex;
     align-items: center;
     width: 100%;
+    min-height: 0;
     overflow: hidden;
     z-index: 1;
     mask-image: linear-gradient(to right, transparent 0%, black 15%, black 85%, transparent 100%);
